--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,27 @@ body,html{
 input {
   font-family: Prompt-Medium;
 }
+
+.nav-item {
+  position: relative;
+  padding: 0.5rem 1rem;
+}
+
+.nav-item::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0.6px;
+  background-color: #4A90E2; /* Change this color to your desired underline color */
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.nav-item:hover::after,
+.nav-item:focus::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
