--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@ body,html{
   background-repeat:   no-repeat;
   background-position: center center;
   min-height: 100vh;
-  height: 100%;
+  height: max-content;
 }
 
 input {
@@ -47,3 +47,15 @@ input {
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+aside::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+aside {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
