--- a/app/globals.css
+++ b/app/globals.css
@@ -49,12 +49,37 @@ input {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-aside::-webkit-scrollbar {
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-aside {
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Ensure the sidebar is scrollable and the main content remains fixed */
+.sidebar {
+  overflow-y: auto;
+  max-height: 100vh;
+}
+
+/* styles.css */
+.table-container {
+  max-height: 200px;  /* Adjust as needed */
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+/* Hide scrollbar for webkit browsers (Chrome, Safari) */
+.table-container::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.table-container {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
