--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 }
 
 body,html{
-  font-family: Prompt-Medium;
+  font-family: Prompt-Medium !important;
   color: white;
   padding: 0;
   margin: 0;
