--- a/app/car.css
+++ b/app/car.css
@@ -1,47 +1,47 @@
-.my-react-calendar {
-  width: 100%;
-  border: none;
+
+.Calendar {
+  color: #ffffff;
+  background-color: #354151;
+  border-radius: 8px;
+  padding: 10px;
+  overflow: hidden;
 }
 
-.my-react-calendar .react-calendar__navigation {
+/* Navigation styling */
+.Calendar .react-calendar__navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-  background-color: #303952;
-  color: #ecf0f1;
+  background-color: #354151;
+  color: #ffffff;
 }
 
-.my-react-calendar .react-calendar__month-view__weekdays {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  background-color: #303952;
-  color: #ecf0f1;
-  padding: 0.5rem 0;
+/* Weekday styling */
+.Calendar .react-calendar__month-view__weekdays {
+  background-color: #354151;
+  color: #ffffff;
 }
 
-.my-react-calendar .react-calendar__tile {
-  max-width: initial;
-  padding: 1rem 0;
-  text-align: center;
+/* Tile styling */
+.Calendar .react-calendar__tile {
   background-color: transparent;
-  color: #ecf0f1;
+  color: #ffffff;
 }
 
-.my-react-calendar .react-calendar__tile--now {
+.Calendar .react-calendar__tile--now {
   background-color: #16a085;
-  color: #ecf0f1;
+  color: #ffffff;
 }
 
-.my-react-calendar .react-calendar__tile--active {
+.Calendar .react-calendar__tile--active {
   background-color: #2980b9;
-  color: #ecf0f1;
+  color: #ffffff;
 }
 
-.my-react-calendar .react-calendar__tile--hover {
+.Calendar .react-calendar__tile--hover {
   background-color: #3498db;
 }
 
-.weekend {
+.Calendar .react-calendar__month-view__days__day--weekend {
   color: #e74c3c;
 }
